--- a/ux.html
+++ b/ux.html
@@ -42,7 +42,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='http://masglobalconsulting.applytojob.com/apply/BAY4lOgMbL/Front-End-DeveloperAngularReactHTML5CSS3UXUI'>Front End Developer(Angular/React/HTML5/CSS3,UX/UI) - MAS Global Consulting - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q9CaVfwA&k=Job&j=oCgcbfwZ&__jvst=Employee&__jvsd=sqltphwp&__jvsc=Twitter&bid=nKaznMw7'>Compuware Careers - Senior UX Engineer</a></h5> 
@@ -57,11 +57,11 @@
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.eatjobs.co.uk/jobs/9172560/velux-academy-trainer.asp'>VELUX Academy Trainer : Another job on . Education &amp; Training Jobs | Assessor Jobs, Training &amp; Teaching</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.eatjobs.co.uk/jobs/9172560/velux-academy-trainer.asp'>VELUX Academy Trainer : Another job on . Education &amp; Training Jobs | Assessor Jobs, Training &amp; Teaching</a></h5> 
 <p><span class="badge badge-light">Leicester London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999698404419-senior-ux-product-designer-user-experience-saas-html5-css3'>Technology Navigators Senior UX Product Designer - User Experience, SaaS, HTML5/CSS3 | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999698404419-senior-ux-product-designer-user-experience-saas-html5-css3'>Technology Navigators Senior UX Product Designer - User Experience, SaaS, HTML5/CSS3 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, Texas United States  Austin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -91,7 +91,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coachhub.join.com/jobs/457886-ux-writer-product-content-writer-m-f-d-in-startup-in-berlin'>Job @ Coachhub (Berlin): UX Writer / Product Conte... | JOIN</a></h5> 
+<h5><a href='https://coachhub.join.com/jobs/457886-ux-writer-product-content-writer-m-f-d-in-startup-in-berlin'>Job @ Coachhub (Berlin): UX Writer / Product Conte... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin  Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -103,7 +103,7 @@
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BrandungGmbHCoKG/743999698260384-ux-designer-concepter-w-m-d-'>brandung GmbH & Co. KG UX Designer / Concepter (w/m/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BrandungGmbHCoKG/743999698260384-ux-designer-concepter-w-m-d-'>brandung GmbH & Co. KG UX Designer / Concepter (w/m/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">K?ln, Deutschland  Berlin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -123,7 +123,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://styletheory.applytojob.com/apply/RjiCZOeXOF/Senior-UX-Researcher'>Senior UX Researcher - StyleTheory - Career Page</a></h5> 
+<h5><a href='http://styletheory.applytojob.com/apply/RjiCZOeXOF/Senior-UX-Researcher'>Senior UX Researcher - StyleTheory - Career Page</a></h5> 
 <p><span class="badge badge-light">Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -173,7 +173,7 @@
 <p><span class="badge badge-light">Jakarta Selatan, Indonesia  Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/flatironschoolcareers/jobs/4497947002'>Job Application for UX/UI Design Coach, London at Flatiron School</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/flatironschoolcareers/jobs/4497947002'>Job Application for UX/UI Design Coach, London at Flatiron School</a></h5> 
 <p><span class="badge badge-light">London London  London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -223,7 +223,7 @@
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/netflix/fb00c0d4-45d0-4200-b618-5ab34c8baa1e'>Netflix - Senior Product UX Researcher, Growth & Customer Health</a></h5> 
+<h5><a href='https://jobs.lever.co/netflix/fb00c0d4-45d0-4200-b618-5ab34c8baa1e'>Netflix - Senior Product UX Researcher, Growth & Customer Health</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -259,7 +259,7 @@
 <p><span class="badge badge-light">Santa Clara, California  San Diego, California  Kirkland, Washington</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://producthire.net/job/senior-ux-researcher-5/'>Senior UX Researcher | PRODUCTHIRE.NET</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/senior-ux-researcher-5/'>Senior UX Researcher | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">Mountain View United States</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -327,7 +327,7 @@
 <p><span class="badge badge-light">Cupertino California  North Carolina  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698269929-ux-designer-snowdrop-'>Ubisoft UX Designer [Snowdrop] | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698269929-ux-designer-snowdrop-'>Ubisoft UX Designer [Snowdrop] | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Malm?</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -353,7 +353,7 @@
 <p><span class="badge badge-light">Zurich, Switzerland</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698266293-ux-designer'>Publicis Groupe UX Designer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698266293-ux-designer'>Publicis Groupe UX Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Warszawa, Polska</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -399,7 +399,7 @@
 <p><span class="badge badge-light">San Mateo</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zattoo.join.com/jobs/459084-ux-researcher-working-student'>Job @ Zattoo (Berlin): UX Researcher (Working Stud... | JOIN</a></h5> 
+<h5><a href='https://zattoo.join.com/jobs/459084-ux-researcher-working-student'>Job @ Zattoo (Berlin): UX Researcher (Working Stud... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -407,7 +407,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qda9Vfwb&k=Job&j=oXAqbfwS&__jvst=Employee&__jvsd=ssgrhfwa&__jvsc=Twitter&bid=nYSHlMw9'>SugarCRM Careers - Senior UX Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qda9Vfwb&k=Job&j=oXAqbfwS&__jvst=Employee&__jvsd=ssgrhfwa&__jvsc=Twitter&bid=nYSHlMw9'>SugarCRM Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">Cupertino California  North Carolina  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -443,7 +443,7 @@
 <p><span class="badge badge-light">San Diego, California  Santa Clara, California  San Diego, CA Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/shopkeep/jobs/1929840'>Job Application for UX Strategist  at ShopKeep</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/shopkeep/jobs/1929840'>Job Application for UX Strategist  at ShopKeep</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -459,7 +459,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999698163151-ux-designer'>K4Connect UX Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999698163151-ux-designer'>K4Connect UX Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
